add texto justificado

--- a/projeto-oficial.html
+++ b/projeto-oficial.html
@@ -69,7 +69,7 @@
                     <h3 class="titulo3">
                         Sou um título. Clique aqui para me editar
                     </h3>
-                    <p>Clique aqui para adicionar seu texto e me editar</p>
+                    <p class="texto-destino-frota">Clique aqui para adicionar seu texto e me editar. É fácil.Basta clicar em "Editar Texto" ou clicar duas vezes sobre mim e poderá adicionar seu próprio conteúdo e mudar fontes. Sou um ótimo lugar para contar sua história e permitir que seus visitantes saibam um pouco mais sobre você.</p>
                 </div>
                 <div id ="barco-destino">
                     <img src="imagens/barcodestino.jpg" alt="barco destino" />
@@ -84,7 +84,7 @@
                     <h3 class="titulo3">
                         Sou um título. Clique aqui para me editar
                     </h3>
-                    <p>Clique aqui para adicionar seu texto e me editar</p>
+                    <p class="texto-destino-frota">Clique aqui para adicionar seu texto e me editar. É fácil.Basta clicar em "Editar Texto" ou clicar duas vezes sobre mim e poderá adicionar seu próprio conteúdo e mudar fontes. Sou um ótimo lugar para contar sua história e permitir que seus visitantes saibam um pouco mais sobre você.</p>
                         <img
                             src="imagens/barconossafrota2.jpg"
                             alt="barco frota 2"
